Fixed missed dark mode elements

--- a/my_todo_app_addon/frontend/style.css
+++ b/my_todo_app_addon/frontend/style.css
@@ -953,7 +953,8 @@ body {
 		color: #fcfcfc;
 	}
 
-	.toggle-filters:hover {
+	.toggle-filters:hover,
+	.category-item:hover {
 		background-color: #2f2f2f;
 	}
 
@@ -971,6 +972,10 @@ body {
 	.description-edit {
 		background: #2f2f2f;
 		color: #f5f5f5;
+	}
+
+	.meta-label {
+		color: #a4abd3;
 	}
 
 	.meta-value,
